Ingress-Controller/blue-deploy.yaml
#blue
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-blue
  labels:
    app: myapp    
spec:
  selector:
    matchLabels:
      app: myapp
      version : blue 
  replicas: 2
  template:
    metadata:
      labels:
        app: myapp
        version : blue 
    spec:
      containers:
      - image: docker.io/kartikeya8/color:blue
        name: myapp
        ports :
        - containerPort : 8080
