Ingress-Controller/green-deploy.yaml
#green
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-green
  labels:
    app: myapp    
spec:
  selector:
    matchLabels:
      app: myapp
      version : green 
  replicas: 2
  template:
    metadata:
      labels:
        app: myapp
        version : green 
    spec:
      containers:
      - image: docker.io/kartikeya8/color:green 
        name: myapp
        ports :
        - containerPort : 8080
