Ingress-Controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
 rules:
  - http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: myapp-blue-service
            port:
              number: 80
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: myapp-blue-service
            port:
              number: 80
